more compoenets and routing added

--- a/src/app/graphic-design/graphic-design.component.html
+++ b/src/app/graphic-design/graphic-design.component.html
@@ -29,7 +29,7 @@
 <div class="section-graphic-app-design">
     <div class="left-section">
       <mat-card class="left-section-container">
-        <mat-card-content class="r-toverlay">
+        <mat-card-content class="left-section-overlay">
           <p>App Design</p>
          <p>View Projects</p>
         </mat-card-content>      
